--- a/index.html
+++ b/index.html
@@ -42,8 +42,20 @@
             </div>
         </section>
     </main>
+    
     <footer>
+        <p>
+            本站访客数 <span id="busuanzi_value_site_uv"></span> 人次
+            <span style="margin: 0 10px;">|</span>
+
+            本站总访问量 <span id="busuanzi_value_site_pv"></span> 次
+        </p>
+
         &copy; 2025 Daniel_清寒的邮政小站 | 本站非中国邮政官方网站，仅供邮政爱好者学习与交流
     </footer>
+
+<!-- 不蒜子网站访问量统计脚本 -->
+<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+
 </body>
 </html>
