--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=ZCOOL+XiaoWei&display=swap" rel="stylesheet">
+    
+    <!-- 评论区分类标签 -->
+    <meta property="og:title" content="post.wuhanqing.cn" />
 </head>
 <body>
     <header>
@@ -51,6 +54,24 @@
                 </div>
                 -->
             </div>
+
+            <!-- Giscus 评论区 -->
+            <script src="https://giscus.app/client.js"
+                data-repo="WuHanqing2005/my-website-discussions"
+                data-repo-id="R_kgDOQWFJIw"
+                data-category="Announcements"
+                data-category-id="DIC_kwDOQWFJI84Cxz_f"
+                data-mapping="og:title"
+                data-strict="1"
+                data-reactions-enabled="1"
+                data-emit-metadata="0"
+                data-input-position="top"
+                data-theme="light"
+                data-lang="zh-CN"
+                data-loading="lazy"
+                crossorigin="anonymous"
+                async>
+            </script>
         </section>
     </main>
     <footer>
