Renew index.html

--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
             <p style="font-size:1.2em;">本站致力于为中国邮政及邮票收藏爱好者提供权威、实用、便捷的服务。无论您是新手还是资深集邮者，这里都有您需要的内容。</p>
             <div class="card-list">
                 <div class="card">
-                    <div class="card-title">最新邮政资讯</div>
-                    <div class="card-desc">每日更新中国邮政最新政策、邮票发行、邮政业务动态，助您把握行业脉搏。</div>
+                    <div class="card-title">邮编查询</div>
+                    <div class="card-desc">支持邮编查地址和地址查邮编的双向智能查询，覆盖全国所有邮编数据库，秒速精准匹配。</div>
                 </div>
                 <div class="card">
                     <div class="card-title">邮资计算工具</div>
-                    <div class="card-desc">支持平邮、挂号信、快递包裹、EMS等多种业务，资费一键查询，方便快捷。</div>
+                    <div class="card-desc">支持国内平邮、港澳台、国际等多种业务，自动计算邮资，提供详细的资费明细表。</div>
                 </div>
                 <div class="card">
-                    <div class="card-title">资料下载</div>
-                    <div class="card-desc">邮政业务手册、邮票目录、资费标准、集邮知识等权威资料免费下载。</div>
+                    <div class="card-title">条码生成与验证</div>
+                    <div class="card-desc">生成或验证中国邮政条形码，支持12位至14位条码格式，一键生成可打印条码图片。</div>
                 </div>
             </div>
         </section>
