--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a class="tab" href="calculator.html">邮资计算</a>
         <a class="tab" href="makecode.html">打印条码</a>
         <a class="tab" href="postcode.html">邮编查询</a>
-        <a class="tab" href="download.html">资料下载</a>
+        <a class="tab" href="download.html">软件下载</a>
         <a class="tab" href="contact.html">联系我们</a>
     </nav>
     <main>
