--- a/makecode.html
+++ b/makecode.html
@@ -23,7 +23,7 @@
         <a class="tab" href="calculator.html">邮资计算</a>
         <a class="tab active" href="makecode.html">打印条码</a>
         <a class="tab" href="postcode.html">邮编查询</a>
-        <a class="tab" href="download.html">资料下载</a>
+        <a class="tab" href="download.html">软件下载</a>
         <a class="tab" href="contact.html">联系我们</a>
     </nav>
     <main>
